--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -9,6 +9,7 @@ platforms:
   - name: ubuntu-12.04
 
 suites:
-  - name: default
+  - name: ubuntu-12.04
     run_list:
+        - "recipe[apt]"
     attributes:
