--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -12,4 +12,5 @@ suites:
   - name: ubuntu-12.04
     run_list:
         - "recipe[apt]"
+        - "recipe[et_apache_test::default]"
     attributes:
