Add files necessary for the Berkshelf Way

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -11,8 +11,5 @@ platforms:
 suites:
   - name: default
     run_list:
-      - recipe[apache2::default]
+      - recipe[etapachetest::default]
     attributes:
-    excludes: 
-      - a2ensite
-    
